raft contact page1

--- a/rafting/tours.html
+++ b/rafting/tours.html
@@ -8,9 +8,9 @@
     <meta name="instructor" content="J. Blazzard" />
     <meta
       name="description"
-      content="Exciting Expeditions, LLC River Running, Tours, and Adventures"
+      content="Adventures Offered by our Company: Exciting Expeditions, LLC"
     />
-    <title>Exciting Expeditions River Running</title>
+    <title>Let Us Take You on an Exciting Expedition!</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -51,53 +51,13 @@
 
       <main>
         <div class="top_banner">
-          <button onclick="window.location.href='../rafting/tours.html';">Let's Go!</button>
+          <button>Let's Go!</button>
           <img
-          src="../rafting/images/river_aerial4.jpg"
-          class="hero_image"
-          alt="Oh, the places we will go..."
+            src="../rafting/images/river_aerial4.jpg"
+            class="hero_image"
+            alt="Oh, the places we will go..."
           />
-          
         </div>
-        <section class="relax">
-          <h2>We run rivers to relax.</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
-            aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
-            reprehenderit, quidem corrupti eligendi.
-          </p>
-        </section>
-        <img
-          src="../rafting/images/river_relax2_640-896.jpg"
-          class="relax_image"
-          alt="We run to relax."
-        />
-        <img
-          src="../rafting/images/orange_raft_splash_640x426.jpg"
-          class="rush_image"
-          alt="Feel the whitewater rush!"
-        />
-        <section class="rush">
-          <h2>We run whitewater for the rush!</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
-            aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
-            reprehenderit, quidem corrupti eligendi.
-          </p>
-        </section>
-
-        <section class="invitation">
-          <h2>Come run with us!</h2>
-          <p>
-            We invite you to come relax with us on one of the amazing rivers we
-            visit.
-            <br />
-            Check out our trips and let us know which one best suits you. We're
-            waiting to hear from you!
-          </p>
-        </section>
       </main>
 
       <footer>
