--- a/rafting/index.html
+++ b/rafting/index.html
@@ -62,10 +62,7 @@
         <section class="relax">
           <h2>We run rivers to relax.</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
-            aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
-            reprehenderit, quidem corrupti eligendi.
+            We believe that there is nothing like a river trip for relaxing.  That is why we subscribe to the dry oar philosophy of boating.  Keeping your oars dry, for us, means taking time to look around and notice the beauty that surrounds the rivers we love.
           </p>
         </section>
         <img
@@ -81,10 +78,7 @@
         <section class="rush">
           <h2>We run whitewater for the rush!</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem at fuga nulla saepe laboriosam est magni aspernatur
-            aliquam fugit alias vel ipsam repellat, possimus doloribus quas,
-            reprehenderit, quidem corrupti eligendi.
+            That doesn’t mean we don’t also like rapids.  Balance in all things, after all.  We believe that the apprehension that comes when you are looking down a stretch of big rapids makes you appreciate the calm, beautiful water that always follows.
           </p>
         </section>
 
