--- a/rafting/index.html
+++ b/rafting/index.html
@@ -40,10 +40,10 @@
               <a href="../rafting/index.html" title="Exciting Expeditions Home">Home</a>
             </li>
             <li id="areaT2">
-              <a href="../rafting/tours.html" title="Tours" ">Tours</a>
+              <a href="../rafting/tours.html" title="Tours">Tours</a>
             </li>
             <li id="areaT3">
-              <a href="../rafting/contact.html" title="Contact Us" ">Contact Us</a>
+              <a href="../rafting/contact.html" title="Contact Us">Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -57,7 +57,6 @@
           class="hero_image"
           alt="Oh, the places we will go..."
           />
-          
         </div>
         <section class="relax">
           <h2>We run rivers to relax.</h2>
