--- a/rafting/tours.html
+++ b/rafting/tours.html
@@ -8,9 +8,9 @@
     <meta name="instructor" content="J. Blazzard" />
     <meta
       name="description"
-      content="Adventures Offered by our Company: Exciting Expeditions, LLC"
+      content="Exciting Expeditions, LLC River Running, Tours, and Adventures"
     />
-    <title>Let Us Take You on an Exciting Expedition!</title>
+    <title>Exciting Expeditions River Running</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -40,10 +40,10 @@
               <a href="../rafting/index.html" title="Exciting Expeditions Home">Home</a>
             </li>
             <li id="areaT2">
-              <a href="../rafting/tours.html" title="Tours" ">Tours</a>
+              <a href="../rafting/tours.html" title="Tours">Tours</a>
             </li>
             <li id="areaT3">
-              <a href="../rafting/contact.html" title="Contact Us" ">Contact Us</a>
+              <a href="../rafting/contact.html" title="Contact Us">Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -51,13 +51,44 @@
 
       <main>
         <div class="top_banner">
-          <button>Let's Go!</button>
+          <button onclick="window.location.href='../rafting/tours.html';">Come to Relax or Come for the Rush We Will Take You There!</button>
           <img
-            src="../rafting/images/river_aerial4.jpg"
-            class="hero_image"
-            alt="Oh, the places we will go..."
+          src="../rafting/images/river_aerial4.jpg"
+          class="hero_image"
+          alt="Oh, the places we will go..."
           />
         </div>
+        <h2 class="tour_h2">Discover New Adventures Just Waiting for You!</h2>
+        <div class="tour_cards">
+          <span class="tour_stuff">
+            <img class="tour_pic" src="../rafting/images/blue_river_norway_640x959.jpg" alt="Blue River, Norway">
+            <span class="tour_rectangle">Blue River</span>
+            <span class="tour_name">Blue River Rapids</span>
+            <span class="tour_teas">Challenge your skill with a Norwegian river known for it's rapids.</span>
+            <span class="read_more">Read More</span>
+          </span>
+          <span class="tour_stuff">
+            <img class="tour_pic" src="../rafting/images/unicorn_raft_680x959.jpg" alt="Stream of Consciousness">
+            <span class="tour_rectangle">Dreamscape</span>
+            <span class="tour_name">Psychedelic Stream</span>
+            <span class="tour_teas">Rest, Relax, and experience this run through streams of subconsciousness.</span>
+            <span class="read_more">Read More</span>
+          </span>
+          <span class="tour_stuff">
+            <img class="tour_pic" src="../rafting/images/lazy_river_640x800.jpg" alt="The Lazy River">
+            <span class="tour_rectangle">Rubber Rafting</span>
+            <span class="tour_name">The Lazy River</span>
+            <span class="tour_teas">Return to the days of your youth, when an inflatable raft and fishing rod were all you need.</span>
+            <span class="read_more">Read More</span>
+          </span>
+        </div>
+        <span class="spec_tours">
+          <img src="../rafting/images/placeimg_500_300_rockystream.jpg" alt="Create An Adventure All Your Own">
+          <button class="spec_button">Special Tours</button>
+          <span class="spec_text">Choose your own adventure. We will help!</span>
+        </span>
+        
+        
       </main>
 
       <footer>
@@ -94,3 +125,4 @@
     </div>
   </body>
 </html>
+
