--- a/rafting/contact.html
+++ b/rafting/contact.html
@@ -40,10 +40,10 @@
               <a href="../rafting/index.html" title="Exciting Expeditions Home">Home</a>
             </li>
             <li id="areaT2">
-              <a href="../rafting/tours.html" title="Tours" ">Tours</a>
+              <a href="../rafting/tours.html" title="Tours" >Tours</a>
             </li>
             <li id="areaT3">
-              <a href="../rafting/contact.html" title="Contact Us" ">Contact Us</a>
+              <a href="../rafting/contact.html" title="Contact Us" >Contact Us</a>
             </li>
           </ul>
         </nav>
@@ -60,24 +60,24 @@
           <span class="hero_text">Let us find the perfect expedition for your group. We have expeditions for every adventurer!</span>
         </div>
         <div class=contact_boxes>
-          <section class="call_us">
+          <span class="call_us">
             <img class=contact_icons src="../rafting/images/icons8-call-64.png" alt="Call Us Now">
             <span class="l1_contact">Let's Go Rafting!</span>
             <span class="l2_contact">Call our agents to launch your expedition!</span>
             <span class="l3_contact">(999) 999-9999</span>
-          </section>
-          <section class="learn_more">
+          </span>
+          <span class="learn_more">
             <img class=contact_icons src="../rafting/images/icons8-floating-guru-64.png" alt="Call Us Now">
             <span class="l1_contact">Chat With A River Guide</span>
             <span class="l2_contact">Learn more about our adventures!</span>
             <span class="l3_contact">Chat Now</span>
-          </section>
-          <section class=address_box>
+          </span>
+          <span class=address_box>
             <span class="l1_contact">Exciting Expeditions, LLC</span>
             <span class="l3_contact">34 Pirate's Cove</span>
             <span class="l3_contact">Route 66</span>
             <span class="l3_contact">West Rafting City, State of Euphoria 88888</span>
-          </section>
+          </span>
         </div>
       </main>
 
