--- a/final_project/fp-siteplan.html
+++ b/final_project/fp-siteplan.html
@@ -28,6 +28,7 @@
       <ul>
         <li><a href="#sitename">Site Name</a></li>
         <li><a href="#purpose">Site Purpose and Goals</a></li>
+        <li><a href="#siteplan">Site Plan</a></li>
         <li><a href="#sitemap">Site Map</a></li>
         <li><a href="#targetaudience">Target Audience</a></li>
         <li><a href="#logo">Logo</a></li>
@@ -41,6 +42,18 @@
         <h3>Site Name</h3>
         <p>The Story of My Knives</p>
       </section>
+      <section >
+        <h3 >Site Plan (open images in a new tab to see the full sized view)
+          <span class=images>
+            <img  class=pic src="fp_images/main_mro.jpg" alt="Main Page" />
+            <img  class=pic src="fp_images/gallery_mro.jpg" alt="Gallery Page" />
+            <img class=pic src="fp_images/profiles_mro.jpg" alt="Profiles Page" />
+            <img class=pic src="fp_images/safety_care_mro.jpg" alt="Safety, Sharpening, & Care Page" />
+            
+          </span>
+        </h3>
+      </section>
+      
       <a id="sitemap"></a>
       <section>
         <h3>Site Map</h3>
