--- a/rafting/tours.html
+++ b/rafting/tours.html
@@ -30,7 +30,7 @@
     <div class="page">
       <header>
         <img
-          src="../rafting/images/excitingexpeditions.bmp"
+          src="../rafting/images/excitingexpeditions1.bmp"
           class="logo"
           alt="The Official Logo of Exciting Expeditions, LLC"
         />
@@ -53,7 +53,7 @@
         <div class="top_banner">
           <button onclick="window.location.href='../rafting/tours.html';">Come to Relax or Come for the Rush We Will Take You There!</button>
           <img
-          src="../rafting/images/river_aerial4_1.jpg"
+          src="../rafting/images/river_aerial4_3.jpg"
           class="hero_image"
           alt="Oh, the places we will go..."
           />
@@ -61,21 +61,21 @@
         <h1 class="tour_h2">Discover New Adventures Just Waiting for You!</h1>
         <div class="tour_cards">
           <span class="tour_stuff">
-            <img class="tour_pic" src="../rafting/images/blue_river_norway1.jpg" alt="Blue River, Norway">
+            <img class="tour_pic" src="../rafting/images/blue_river_norway2.jpg" alt="Blue River, Norway">
             <span class="tour_rectangle">Blue River</span>
             <span class="tour_name">Blue River Rapids</span>
             <span class="tour_teas">Challenge your skill with a Norwegian river known for it's rapids.</span>
             <span class="read_more">Read More</span>
           </span>
           <span class="tour_stuff">
-            <img class="tour_pic" src="../rafting/images/unicorn_raft_1.jpg" alt="Stream of Consciousness">
+            <img class="tour_pic" src="../rafting/images/unicorn_raft_2.jpg" alt="Stream of Consciousness">
             <span class="tour_rectangle">Dreamscape</span>
             <span class="tour_name">Psychedelic Stream</span>
             <span class="tour_teas">Rest, Relax, and experience this run through streams of subconsciousness.</span>
             <span class="read_more">Read More</span>
           </span>
           <span class="tour_stuff">
-            <img class="tour_pic" src="../rafting/images/lazy_river_640x800.jpg" alt="The Lazy River">
+            <img class="tour_pic" src="../rafting/images/lazy_river_1.jpg" alt="The Lazy River">
             <span class="tour_rectangle">Rubber Rafting</span>
             <span class="tour_name">The Lazy River</span>
             <span class="tour_teas">Return to the days of your youth, when an inflatable raft and fishing rod were all you need.</span>
@@ -83,7 +83,7 @@
           </span>
         </div>
         <span class="spec_tours">
-          <img src="../rafting/images/rockystream3.jpg" alt="Create An Adventure All Your Own">
+          <img class="spec_img" src="../rafting/images/river_relax_640x426.jpg" alt="Create An Adventure All Your Own">
           <button class="spec_button">Special Tours</button>
           <span class="spec_text">Choose your own adventure. We will help!</span>
         </span>
