fp siteplan css

--- a/final_project/fp-siteplan.html
+++ b/final_project/fp-siteplan.html
@@ -11,7 +11,7 @@
       content="A personal account of the knives I own and how they came into my posession."
     />
     <title>The Story of My Knives</title>
-    <link rel="stylesheet" href="css/fp_style.css" />
+    <link rel="stylesheet" href="css/fp_siteplan_style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -121,45 +121,45 @@
         <h3>Color Scheme</h3>
         <ul class="color_ul">
           <li class="color_li">
-            <cite
+            <cite class="text1"
               >Text #001524
               <button class="text1"></button>
             </cite>
           </li>
           <li class="color_li">
-            <cite>Color1 #15616d <button class="color1"></button></cite>
+            <cite class="color1">Color1 #15616d <button class="color1"></button></cite>
           </li>
           <li class="color_li">
-            <cite>Color2 #368f8b <button class="color2"></button></cite>
+            <cite class="color2">Color2 #368f8b <button class="color2"></button></cite>
           </li>
           <li class="color_li">
-            <cite>Color3 #ff7d00 <button class="color3"></button></cite>
+            <cite class="color3">Color3 #ff7d00 <button class="color3"></button></cite>
           </li>
           <li class="color_li">
-            <cite>Color4 #78290f <button class="color4"></button></cite>
+            <cite class="color4">Color4 #78290f <button class="color4"></button></cite>
           </li>
           <li class="color_li">
-            <cite>Accent1 #e63946 <button class="accent1"></button></cite>
+            <cite class="accent1">Accent1 #e63946 <button class="accent1"></button></cite>
           </li>
           <li class="color_li">
-            <cite>Accent2 #a8dadc <button class="accent2"></button></cite>
+            <cite class="accent2">Accent2 #a8dadc <button class="accent2"></button></cite>
           </li>
           <li class="color_li">
-            <cite>Accent3 #5f0f40 <button class="accent3"></button></cite>
+            <cite class="accent3">Accent3 #5f0f40 <button class="accent3"></button></cite>
           </li>
           <li class="color_li">
-            <cite>Background #f1faee <button class="bkgrnd"></button></cite>
+            <cite class="bkgrnd">Background #f1faee <button class="bkgrnd"></button></cite>
           </li>
         </ul>
       </section>
       <a id="typography"></a>
       <section>
         <h3>Typography</h3>
-        <p>
+        <p class="font1">
           Headings:
           <button class="font1">IM Fell English SC</button>
         </p>
-        <p>
+        <p class="font2">
           Regular text:
           <button class="font2">Open Sans, sans-serif</button>
         </p>
