--- a/rafting/tours.html
+++ b/rafting/tours.html
@@ -62,24 +62,30 @@
         <div class="tour_cards">
           <span class="tour_stuff">
             <img class="tour_pic" src="../rafting/images/blue_river_norway2.jpg" alt="Blue River, Norway">
-            <span class="tour_rectangle">Blue River</span>
-            <span class="tour_name">Blue River Rapids</span>
-            <span class="tour_teas">Challenge your skill with a Norwegian river known for it's rapids.</span>
-            <span class="read_more">Read More</span>
+            <div class="call_us">
+              <span class="tour_rectangle">Blue River</span>
+              <span class="tour_name">Blue River Rapids</span>
+              <span class="tour_teas">Challenge your skill with a Norwegian river known for it's rapids.</span>
+              <span class="read_more">Read More</span>
+            </div>
           </span>
           <span class="tour_stuff">
             <img class="tour_pic" src="../rafting/images/unicorn_raft_2.jpg" alt="Stream of Consciousness">
-            <span class="tour_rectangle">Dreamscape</span>
-            <span class="tour_name">Psychedelic Stream</span>
-            <span class="tour_teas">Rest, Relax, and experience this run through streams of subconsciousness.</span>
-            <span class="read_more">Read More</span>
+            <div class="call_us">
+              <span class="tour_rectangle">Dreamscape</span>
+              <span class="tour_name">Psychedelic Stream</span>
+              <span class="tour_teas">Rest, Relax, and experience this run through streams of subconsciousness.</span>
+              <span class="read_more">Read More</span>
+            </div>
           </span>
           <span class="tour_stuff">
             <img class="tour_pic" src="../rafting/images/lazy_river_1.jpg" alt="The Lazy River">
-            <span class="tour_rectangle">Rubber Rafting</span>
-            <span class="tour_name">The Lazy River</span>
-            <span class="tour_teas">Return to the days of your youth, when an inflatable raft and fishing rod were all you need.</span>
-            <span class="read_more">Read More</span>
+            <div class="call_us">
+              <span class="tour_rectangle">Rubber Rafting</span>
+              <span class="tour_name">The Lazy Fishing River</span>
+              <span class="tour_teas">Return to your youth, when an inflatable raft and fishing rod were all you need.</span>
+              <span class="read_more">Read More</span>
+            </div>
           </span>
         </div>
         <span class="spec_tours">
