--- a/rafting/index.html
+++ b/rafting/index.html
@@ -61,7 +61,7 @@
         <section class="relax">
           <h1>We run rivers to relax.</h1>
           <p>
-            We believe that there is nothing like a river trip for relaxing.  That is why we subscribe to the dry oar philosophy of boating.  Keeping your oars dry, for us, means taking time to look around and notice the beauty that surrounds the rivers we love.
+            We believe there is nothing like a river for relaxing.  That's why we subscribe to the dry oar philosophy of boating.  Keeping your oars dry, for us, means taking time to look around and notice the beauty that surrounds the rivers we love.
           </p>
         </section>
         <img
@@ -85,9 +85,7 @@
           <h1>Come run with us!</h1>
           <p>
             We invite you to come relax with us on one of the amazing rivers we
-            visit.
-            <br />
-            Check out our trips and let us know which one best suits you. We're
+            visit. Check out our trips and let us know which one best suits you. We're
             waiting to hear from you!
           </p>
         </section>
