--- a/rafting/contact.html
+++ b/rafting/contact.html
@@ -12,8 +12,8 @@
     />
     <title>Give Exciting Expeditions A Call Or Send Us A Message</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Open+Sans:wght@300;400&family=Pacifico&display=swap"
       rel="stylesheet"
