--- a/rafting/tours.html
+++ b/rafting/tours.html
@@ -54,7 +54,7 @@
             <img class="tour_pic" src="../rafting/images/blue_river_norway2.jpg" alt="Blue River, Norway">
             <span class="call_us">
               <span class="tour_rectangle">Blue River</span>
-              <span class="tour_name">Blue River Rapids</span>
+              <h1 class="tour_name">Blue River Rapids</h1>
               <span class="tour_teas">Challenge your skill with a Norwegian river known for it's rapids.</span>
               <span class="read_more">Read More</span>
             </span>
@@ -63,7 +63,7 @@
             <img class="tour_pic" src="../rafting/images/unicorn_raft_2.jpg" alt="Stream of Consciousness">
             <span class="call_us">
               <span class="tour_rectangle">Dreamscape</span>
-              <span class="tour_name">Psychedelic Stream</span>
+              <h1 class="tour_name">Psychedelic Stream</h1>
               <span class="tour_teas">Rest, Relax, and experience this run through streams of subconsciousness.</span>
               <span class="read_more">Read More</span>
             </span>
@@ -72,7 +72,7 @@
             <img class="tour_pic" src="../rafting/images/lazy_river_1.jpg" alt="The Lazy River">
             <span class="call_us">
               <span class="tour_rectangle">Rubber Rafting</span>
-              <span class="tour_name">The Lazy Fishing River</span>
+              <h1 class="tour_name">The Lazy Fishing River</h1>
               <span class="tour_teas">Return to your youth, when an inflatable raft and fishing rod were all you need.</span>
               <span class="read_more">Read More</span>
             </span>
