--- a/rafting/tours.html
+++ b/rafting/tours.html
@@ -50,33 +50,33 @@
         </div>
         <h1 class="tour_h2">Discover New Adventures Just Waiting for You!</h1>
         <div class="tour_cards">
-          <span class="tour_stuff">
+          <div class="tour_stuff">
             <img class="tour_pic" src="../rafting/images/blue_river_norway2.jpg" alt="Blue River, Norway">
-            <span class="call_us">
-              <span class="tour_rectangle">Blue River</span>
+            <div class="call_us">
+              <div class="tour_rectangle">Blue River</div>
               <h1 class="tour_name">Blue River Rapids</h1>
               <span class="tour_teas">Challenge your skill with a Norwegian river known for it's rapids.</span>
               <span class="read_more">Read More</span>
-            </span>
-          </span>
-          <span class="tour_stuff">
+            </div>
+          </div>
+          <div class="tour_stuff">
             <img class="tour_pic" src="../rafting/images/unicorn_raft_2.jpg" alt="Stream of Consciousness">
-            <span class="call_us">
+            <div class="call_us">
               <span class="tour_rectangle">Dreamscape</span>
               <h1 class="tour_name">Psychedelic Stream</h1>
               <span class="tour_teas">Rest, Relax, and experience this run through streams of subconsciousness.</span>
               <span class="read_more">Read More</span>
-            </span>
-          </span>
-          <span class="tour_stuff">
+            </div>
+          </div>
+          <div class="tour_stuff">
             <img class="tour_pic" src="../rafting/images/lazy_river_1.jpg" alt="The Lazy River">
-            <span class="call_us">
+            <div class="call_us">
               <span class="tour_rectangle">Rubber Rafting</span>
               <h1 class="tour_name">The Lazy Fishing River</h1>
               <span class="tour_teas">Return to your youth, when an inflatable raft and fishing rod were all you need.</span>
               <span class="read_more">Read More</span>
-            </span>
-          </span>
+            </div>
+          </div>
         </div>
         <span class="spec_tours">
           <img class="spec_img" src="../rafting/images/river_relax_640x426.jpg" alt="Create An Adventure All Your Own">
