--- a/rafting/contact.html
+++ b/rafting/contact.html
@@ -50,18 +50,18 @@
           <span class="hero_text">Let us find the perfect expedition for your group. We have expeditions for every adventurer!</span>
         </div>
         <div class=contact_boxes>
-          <span class="call_us">
+          <div class="call_us">
             <img class=contact_icons src="../rafting/images/icons8-call-64.png" alt="Call Us Now">
             <h1 class="l1_contact">Let's Go Rafting!</h1>
             <span class="l2_contact">Call our agents to launch your expedition!</span>
             <span class="l3_contact">(999) 999-9999</span>
-          </span>
-          <span class="learn_more">
+          </div>
+          <div class="learn_more">
             <img class=contact_icons src="../rafting/images/icons8-floating-guru-64.png" alt="Call Us Now">
             <h1 class="l1_contact">Chat With A River Guide</h1>
             <span class="l2_contact">Learn more about our adventures!</span>
             <span class="l3_contact">Chat Now</span>
-          </span>
+          </div>
           <span class=address_box>
             <span class="l1_contact">Exciting Expeditions, LLC</span>
             <span class="l3_contact">34 Pirate's Cove</span>
