wk12 html final proj

--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -28,18 +28,21 @@
         </nav>
     </header>
       <main>
-        <section class="galley">
-            <span><img class="gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_big" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_big" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_big" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-            <span><img class="gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife."></span>
-        </section>
+        <div class="gallery">
+          
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_big" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_big" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_big" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_sma" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+            <span class="g_big" ><img src="fp_images/first_knife.jpg" alt="My first knife."></span>
+        </div>
       </main>
       <footer>
         &copy; Matt Ogden, 2021
