--- a/final_project/index.html
+++ b/final_project/index.html
@@ -32,8 +32,9 @@
             <h1>Introduction</h1>
             <p>I've liked knives since I received my first pocket knife as a Cub Scout on my 8th birthday.  Over the years I have casually collected many knives.  Some were gifts, others purchased or found.  Each knife has a story behind it.  I want to tell their stories.  I will showcase my favorite knives and tell you what I like about each.<br/>Would you like to see a few?</p>
         </section>
-        <aside>Profile Links
-            <ul>
+        <aside>
+            <h1>Profile Links</h1>
+            <ul >
                 <li>link1</li>
                 <li>link2</li>
                 <li>link3</li>
