--- a/final_project/profiles.html
+++ b/final_project/profiles.html
@@ -27,28 +27,26 @@
           <a class="care_nav" href="../final_project/safety.html" title="Safety, Sharpening, & Care">Safety, Sharpening, & Care</a>
         </nav>
     </header>
-      </header>
-      <main>
-        <section class="profile_row">
-            <div class="thumbnail">
-                <img class = "gallery_sma" src="fp_images/first_knife.jpg" alt="My first knife.">
-            </div>
-            <div class="story">
-                <h1>Title</h1>
-                <p>Text</p>
-            </div>
-            <div class = "bullets">
-                <ul>
-                    <li>Body style: folder</li>
-                    <li>Blade length: x"</li>
-                    <li>Lock mechanism: none</li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
-        </section>
-      </main>
-      <footer>
-        &copy; Matt Ogden, 2021
-      </footer>
+      
+    <main>
+      <section class="profile_row">
+        <img class="profile_pic" src="fp_images/first_knife.jpg" alt="My first knife.">
+        <div>
+          <h4>Title</h4>
+          <p class="story">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt vitae quaerat repudiandae adipisci? Illo quis cumque odit aperiam pariatur totam?</p>
+        </div>
+        <div>
+            <ul class="story">
+                <li><span class = "bullets">Body style: folder</span></li>
+                <li><span class = "bullets">Blade length: x"</span></li>
+                <li><span class = "bullets">Lock mechanism: none</span></li>
+                <li><span class = "bullets"></span></li>
+                <li><span class = "bullets"></span></li>
+            </ul>
+        </div>
+      </section>
+    </main>
+    <footer>
+      &copy; Matt Ogden, 2021
+    </footer>
   </body>
