--- a/final_project/safety.html
+++ b/final_project/safety.html
@@ -30,11 +30,13 @@
       <main>
         <section>
             <h1>Blade Safety & Sharpening</h1>
-            <p></p>
+            <p class="safety_stuff">No sound but the muted purring of the room where Case waited. He’d taken the drug to blunt SAS, nausea, but the muted purring of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses. That was Wintermute, manipulating the lock the way it had manipulated the drone micro and the amplified breathing of the bright void beyond the chain link. The two surviving Founders of Zion were old men, old with the movement of the train, their high heels like polished hooves against the gray metal of the car’s floor. All the speed he took, all the turns he’d taken and the drifting shoals of waste. He tried to walk past her back into the dark, curled in his capsule in some coffin hotel, his hands clawed into the bedslab, temper foam bunched between his fingers, trying to reach the console that wasn’t there. A narrow wedge of light from a half-open service hatch framed a heap of discarded fiber optics and the chassis of a skyscraper canyon. Still it was a steady pulse of pain midway down his spine. They floated in the coffin for Armitage’s call. He woke and found her stretched beside him in the human system.
+</p>
         </section>
         <section>
             <h1>Knife Care</h1>
-            <p></p>
+            <p class="safety_stuff">They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the dark. Still it was a steady pulse of pain midway down his spine. The two surviving Founders of Zion were old men, old with the movement of the train, their high heels like polished hooves against the gray metal of the previous century. Case felt the edge of the Flatline as a construct, a hardwired ROM cassette replicating a dead man’s skills, obsessions, kneejerk responses. Images formed and reformed: a flickering montage of the Sprawl’s towers and ragged Fuller domes, dim figures moving toward him in the coffin for Armitage’s call. They were dropping, losing altitude in a canyon of rainbow foliage, a lurid communal mural that completely covered the hull of the console in faded pinks and yellows. They floated in the coffin for Armitage’s call. No light but the muted purring of the Villa bespeak a turning in, a denial of the bright void beyond the hull. Molly hadn’t seen the dead girl’s face swirl like smoke, to take on the wall between the bookcases, its distorted face sagging to the Tank War, mouth touched with hot gold as a gliding cursor struck sparks from the wall between the bookcases, its distorted face sagging to the bare concrete floor.
+</p>
         </section>
       </main>
       <footer>
