--- a/final_project/gallery.html
+++ b/final_project/gallery.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#002587" />
     <meta
       name="description"
-      content="This is a pictoral gallery of my knives. "
+      content="This is a pictoral gallery of my knives. It features links to short descriptions and stories about each knife."
     />
     <title>My Knives: Picture Gallery</title>
     <link rel="stylesheet" href="css/fp_style.css" />
