--- a/final_project/index.html
+++ b/final_project/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#002587" />
     <meta
       name="description"
-      content="My knives, stories about how I got them, and information on knife care."
+      content="This the home page of The Story of My Knives. It features some of my knives, stories about how I got them, and information on knife care."
     />
-    <title>The Story of My Knives</title>
+    <title>The Story of My Knives Home</title>
     <link rel="stylesheet" href="css/fp_style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -48,7 +48,7 @@
         </aside>
         <form action="/my-handling-form-page" method="post">
             <fieldset>
-                <legend>Would you like give your opinion in the debate on fixed blades vs. folders? Let your voice be heard here!</legend>
+                <legend>Would you like give your opinion in the debate on fixed blades vs. folders? Let's hear what you have to say!</legend>
 
             <ul class="form_list">
                 <li>
@@ -67,7 +67,7 @@
                 <li class="button">
                     
                     <button type="submit">
-                        My opinion counts!
+                        Make my voice heard!
                     </button>
                 </li>
                   
