--- a/final_project/profiles.html
+++ b/final_project/profiles.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#002587" />
     <meta
       name="description"
-      content="My knives, stories about how I got them, and information on knife care."
+      content="Here are the stories about each knife.  I also include a picture and short description of each."
     />
     <title>My Knives: The Stories</title>
     <link rel="stylesheet" href="css/fp_style.css" />
