--- a/final_project/safety.html
+++ b/final_project/safety.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#002587" />
     <meta
       name="description"
-      content="Knife Care, Sharpening, and Safety"
+      content="The contents of this page contain information for knife owners regarding general safety, care and sharpening."
     />
     <title>Caring for a Knife</title>
     <link rel="stylesheet" href="css/fp_style.css" />
